# madam-entropic

./: .gitignore  README.md  client_example.py  openapi.yaml  pyproject.toml  render.yaml  requirements.txt
.well-known/: ai-plugin.json
app/: main.py  pipeline.py  quantum.py  schemas.py  symbolic.py  symbols.json  utils.py
docs/: quantum_details_guide.md
tests/: test_api.py
